fix bg on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,13 @@
 html {  
-  background: url(../assets/binghamton_downtown_bg.jpg) no-repeat center center fixed;
+  background: url(../assets/binghamton_downtown_bg.jpg);
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
   font-family: 'Source Sans Pro', sans-serif;
+  height: 100%;
 }
 .overlay {
   height:100%;
